// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Common cases Admin 1`] = `
directive @auth(requires: Role = ADMIN) on OBJECT | FIELD_DEFINITION | ENUM | ENUM_VALUE | INTERFACE | UNION | INPUT_OBJECT | INPUT_FIELD_DEFINITION | ARGUMENT_DEFINITION | SCALAR

directive @testd on OBJECT

directive @testd2(arg: String) on OBJECT

type Book {
  title: String!
  author: String!
}

type Empty {
  idEmptyPrivate: ID!
  emptyPrivate: Int!
}

enum EnumEmpty {
  PRIVATE1
  PRIVATE2
}

enum EnumPartial {
  PUBLIC
  PRIVATE
}

enum EnumPrivate {
  ValuePrivate1
  ValuePrivate2
}

enum EnumPublic {
  PUBLIC
  PUBLIC2
}

interface IEmpty {
  idEmptyPrivate: ID!
  iEmptyPrivate: Int!
}

input InEmpty {
  empty1private: String
  empty2private: String
}

input InPrivate {
  param1private: String
  param2private: String
}

input InProtected {
  param1protected: String
  param2protected: String
}

input InPublic {
  param1: String
  param2: String
  param2private: String
}

interface IPrivate {
  privateId: ID!
}

interface IPublic {
  id: ID!
  iPrivate: Int!
}

type Mutation {
  mutate: String!
}

type OEmpty implements IEmpty {
  idEmptyPrivate: ID!
  iEmptyPrivate: Int!
  filled: Boolean!
}

type OPrivate implements IPublic {
  id: ID!
  iPrivate: Int!
  private: String!
}

type OPrivate2 implements IPrivate {
  privateId: ID!
  private2: String!
}

type OPublic implements IPublic {
  id: ID!
  iPrivate: Int!
  public: String!
}

union Private = Empty | User | OEmpty

scalar PrivateText

scalar ProtectedText

union Public = Empty | User | OEmpty

type PublicType {
  value: String!
}

type Query {
  me: User!
  tPublic: PublicType!
  iPublic: IPublic!
  iPrivate: IPrivate!
  iEmpty: IEmpty!
  empty: Empty!
  uPublic: [Public!]!
  uPrivate: [Private!]!
  meProtected: User!
  books: [Book!]!
  args1(argPublic: String!): Int!
  args2(argProtected: String!): Int!
  args3(argPrivate: String!): Int!
  args4(argPublic: String!, argPrivate: String!): Int!
  args5(argPublic: String!, argPrivate: String!, argLast: String!): Int!
  args6(argPrivate: String!, argLast: String!): Int!
  args7(argProtected: String!, argPrivate: String!, argLast: String!): Int!
}

enum Role {
  ADMIN
  REVIEWER
  USER
  GUEST
}

type Subscription {
  subscribe: Int!
}

scalar Text

type User {
  name: String!
  roleProtected: String!
  roleForAdmin: String!
}

`;

exports[`Common cases Guest 1`] = `
type Empty {

}

enum EnumEmpty {

}

enum EnumPartial {
  PUBLIC
}

enum EnumPublic {
  PUBLIC
  PUBLIC2
}

interface IEmpty {

}

input InEmpty {

}

input InPublic {
  param1: String
  param2: String
}

interface IPublic {
  id: ID!
}

type Mutation {
  mutate: String!
}

type OEmpty implements IEmpty {
  filled: Boolean!
}

type OPublic implements IPublic {
  id: ID!
  public: String!
}

union Public = Empty | User | OEmpty

type PublicType {
  value: String!
}

type Query {
  me: User!
  tPublic: PublicType!
  iPublic: IPublic!
  iEmpty: IEmpty!
  empty: Empty!
  uPublic: [Public!]!
  args1(argPublic: String!): Int!
  args2: Int!
  args3: Int!
  args4(argPublic: String!): Int!
  args5(argPublic: String!, argLast: String!): Int!
  args6(argLast: String!): Int!
  args7(argLast: String!): Int!
}

type Subscription {
  subscribe: Int!
}

scalar Text

type User {
  name: String!
}

`;

exports[`Common cases User 1`] = `
type Empty {

}

enum EnumEmpty {

}

enum EnumPartial {
  PUBLIC
}

enum EnumPublic {
  PUBLIC
  PUBLIC2
}

interface IEmpty {

}

input InEmpty {

}

input InProtected {
  param1protected: String
  param2protected: String
}

input InPublic {
  param1: String
  param2: String
}

interface IPublic {
  id: ID!
}

type Mutation {
  mutate: String!
}

type OEmpty implements IEmpty {
  filled: Boolean!
}

type OPublic implements IPublic {
  id: ID!
  public: String!
}

scalar ProtectedText

union Public = Empty | User | OEmpty

type PublicType {
  value: String!
}

type Query {
  me: User!
  tPublic: PublicType!
  iPublic: IPublic!
  iEmpty: IEmpty!
  empty: Empty!
  uPublic: [Public!]!
  meProtected: User!
  args1(argPublic: String!): Int!
  args2(argProtected: String!): Int!
  args3: Int!
  args4(argPublic: String!): Int!
  args5(argPublic: String!, argLast: String!): Int!
  args6(argLast: String!): Int!
  args7(argProtected: String!, argLast: String!): Int!
}

enum Role {
  ADMIN
  REVIEWER
  USER
  GUEST
}

type Subscription {
  subscribe: Int!
}

scalar Text

type User {
  name: String!
  roleProtected: String!
}

`;
